# GameTP

./: GameDescription.md  README.md  UnitArchitecture.txt
Game/: CMakeLists.txt  Economy.h  Player.h  main.cpp
Game/Army/: Army.h
Game/Army/Units/: Archor.h  Drummer.h  Knight.h  SiegeWeapon.h  Unit.h
Game/Town/: Town.h
Game/Town/Buildings/: ArtilleryDepot.h  Barrack.h  Building.h  Mines.h  Stable.h  Towers.h
GameStuff/Game/: CMakeLists.txt  Knowledge.h
GameStuff/Game/Army/Units/: Roundshier.h  Spear.h
GameStuff/Game/Town/Buildings/: Academy.h
